<resources>
    <string name="open">OPen</string>
    <string name="close">Close</string>
    <string name="app_name">Cash In</string>
    <string name="logoSubhead">Invest and Earn</string>
    <string name="title_activity_main">Main</string>
    <string name="login">Sign In</string>
    <string name="loginUpper">SIGN IN</string>
    <string name="Register">Register Account</string>
    <string name="RegisterUpper">REGISTER ACCOUNT</string>
    <string name="EmailA">Email Address</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="Profile">Profile</string>
    <string name="IE">Invest and Earn</string>
    <string name="PI">Purchase Investments</string>
    <string name="Messages">Messages</string>
    <string name="WC">Withdraw Cash</string>
    <string name="TM">Terms and Conditions</string>
    <string name="AgreeTM">I agree with the Terms and Conditions</string>
    <string name="H">Help</string>
    <string name="More">More</string>
    <string name="Less">Less</string>
    <string name="logout">Log Out</string>
    <string name="askQ">Ask a question about cash in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_new_pass">New Password</string>
    <string name="prompt_confirm_new_pass">Confirm New Password</string>
    <string name="pass_mismatch">Password are not matching</string>
    <string name="prompt_update_pass">Reset Password</string>
    <string name="prompt_password">Password</string>
    <string name="dont_have_ac">Dont have Account?</string>
    <string name="prompt_Username">Username</string>
    <string name="forgotten_pass">Forgotten Password?</string>
    <string name="unable_to_connect">Unable to send link make sure email provided is correct and you are connected. </string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_should_have">Email should contain @gmail or @yahoo</string>
    <string name="prompt_user_email">Enter your Username or Email</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be greater than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="IAWTC">I agree with the terms and conditions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new__home">New_Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="Powered">©Powered by Awwads Cash In \nSoftware</string>
    <string name="Powered1">©Powered by Awwads Cash In Software</string>

    <string name="Balance">0</string>
    <string name="updateUrl">https://us-central1-cashin-270220.cloudfunctions.net/Check_Updates</string>

    <string name="profile">Profile</string>
    <string name="Message">Message</string>
    <string name="MR">My referee</string>
    <string name="BI">Broadcast investment</string>
    <string name="TC">Terms and condition</string>
    <string name="LO">Log out</string>

</resources>
