<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/btnProf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"
                android:alpha="0"/>

            <Button
                android:id="@+id/btnIE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IE"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnProf" />

            <Button
                android:id="@+id/PI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PI"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnIE" />

            <Button
                android:id="@+id/messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/Messages"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/PI" />

            <Button
                android:id="@+id/WC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WC"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/messages"
                android:alpha="0"/>

            <Button
                android:id="@+id/TM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TM"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/WC"
                android:alpha="0"/>

            <Button
                android:id="@+id/H"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/H"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TM"
                android:alpha="0"/>

            <Button
                android:id="@+id/less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/More"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/H" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true"
        android:background="@null"
        android:alpha="0">

        <androidx.cardview.widget.CardView
            android:id="@+id/toolbMenu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/askQ"/>

        </androidx.cardview.widget.CardView>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>