<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.SignUpFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/divider6"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="53dp"
                android:layout_marginEnd="30dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/RRUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundMode="filled"
                app:boxCollapsedPaddingTop=".2dp"
                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/RUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_Username"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/RRemail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundMode="filled"
                app:boxCollapsedPaddingTop=".2dp"
                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RRUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Remail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/RRpassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundMode="filled"
                app:boxCollapsedPaddingTop=".2dp"
                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RRemail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Rpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/RR_Confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundMode="filled"
                app:boxCollapsedPaddingTop=".2dp"
                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RRpassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/R_Confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox_tmc"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/IAWTC"
                android:textSize="10sp"
                android:textColor="@color/colorGrey"
                android:buttonTint="@color/colorGreyDarker"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RR_Confirm_password" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/my_btn_"
                android:text="@string/Register"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_tmc" />

            <View
                android:id="@+id/divider5"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="53dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="20dp"
                android:text="or"
                app:layout_constraintEnd_toStartOf="@+id/divider6"
                app:layout_constraintStart_toEndOf="@+id/divider5"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/SignInGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <ProgressBar
                android:id="@+id/progressBarSignUp"
                style="?android:attr/progressBarStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnRegister"/>

            <TextView
                android:id="@+id/powerdBy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Powered1"
                android:textAlignment="center"
                android:layout_marginTop="64dp"
                android:textColor="@color/colorGreyDarker"
                app:layout_constraintTop_toBottomOf="@id/SignInGoogle"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/powerdBy"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="enterAlways"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbLogin"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/btnBackSignup"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="?attr/homeAsUpIndicator"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Sign Up"
                    android:layout_marginLeft="32dp"
                    android:textAlignment="gravity"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>